Be more accurate about licensing

--- a/README
+++ b/README
@@ -2,6 +2,6 @@ Fynche - a Framework for Multiagent Computational Creativity
 
 The code in this repository is the result of work done for Dr. Dan Ventura's Computational Creativity course (CS673) at Brigham Young University in the winter semester of 2011. My collaborator (Yisong Guo) and I experimented with the computational production of creative artefacts in a multiagent setting, attempting to test Jennings' hypothesis that it is within a social context that creative autonomy can arise. The artefacts produced by our agents were named colors, as at the http://www.colourlovers.com/ social sharing website. The relative simplicity of the task allowed us to focus primarily on the interaction amongst agents. This culminated in the derivation of a method for affinity updating that seeks stable -- but not static -- cliques amongst agents.
 
-Though I had a collaborator on the class project, I am the sole author of the code in this repository (excepting libraries) and as such retain the copyright. The code is made available under the GNU Affero General Public License, version 3 or later, in the hopes that it will be useful. However, you use it at your own risk.
+Though I had a collaborator on the class project, I am the sole author of the code in this repository (except where otherwise specified) and as such retain the copyright. The code is made available under the GNU Affero General Public License, version 3 or later, in the hopes that it will be useful. However, you use it at your own risk.
 
 Oh, and the name. Well, if you take the 'fin' from 'affinities' and look for words starting with that syllable on the OED, you'll come across 'finch' whose Middle English variant is 'fynche', which I chose simply to be different, and because Middle English is cool. The End.
